# markmap-anywidget

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  flake.nix  package-lock.json  package.json  pyproject.toml  tsconfig.json  widget.ts
.github/workflows/: release.yml  update-deps.yml  workflow.yml
examples/: marimo.py
js/: build.js  package.json  pnpm-lock.yaml  widget.js
src/markmap_anywidget/static/: widget.js  widget.js.map
tests/: test_install.py  test_javascript.py  test_package.py  test_widget.py
