[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markmap_anywidget"
version = "0.3.0"
description = "Interactive mindmaps from markdown using markmap"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["anywidget"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/markmap_anywidget/static/*"]
